# verifiers

environments/browser_env/: README.md  browser_env.py  pyproject.toml
environments/mcp_env/: .env.example  README.md  mcp_env.py  pyproject.toml
